# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
private/: main.cpp
public/: ProjectConfig.h.in
